fix(header-income): fixed income position on mobile in 1 line

--- a/src/shared/header/header.component.css
+++ b/src/shared/header/header.component.css
@@ -143,7 +143,7 @@
   .filters-container things-filter {
     display: inline-block;
     vertical-align: middle;
-    width:100%;
+    width: 100%;
     margin-bottom: 0;
   }
 
@@ -152,9 +152,9 @@
   }
 
   countries-filter {
-    width: calc(100% - 74px);
+    width: calc(100% - 80px);
     vertical-align: top;
-    display: block;
+    display: inline-block;
     left: 0;
     right: 0;
   }
